fixed menu button and scrollbar bug

--- a/hello/static/css/navbar.css
+++ b/hello/static/css/navbar.css
@@ -51,7 +51,7 @@
 }
 
 #menu-button {
-    top: -10vh;
+    top: -100px;
     right: 45px;
     position: fixed;
     font-size: 4rem;
