--- a/hello/static/css/style.css
+++ b/hello/static/css/style.css
@@ -1,13 +1,5 @@
-html {
-    font-size: 16px;
-}
-
 body {
     margin: 0;
-}
-
-body::-webkit-scrollbar {
-    width: 0;
 }
 
 img {
